--- a/blogs.html
+++ b/blogs.html
@@ -10,30 +10,38 @@
     <meta name="robots" content="follow">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="theme-color" content="#F50057">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/web.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/web.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel=" icon" href="/images/fav.ico" type="image/x-icon">
+    <link rel=" icon" href="images/fav.ico" type="image/x-icon">
     <title>Blogs | Prerana Nawar 🖤 </title>
+    <script type="text/javascript">
+        function toggle() {
+            var head = document.getElementById("header")
+            head.classList.toggle('active')
+        }
+    </script>
 </head>
 
 <body>
 
-    <nav class="navbar">
-        <div><a href="/index.html">preCODES</a></div>
+    <header id="header">
+       
+        <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links" href="/">home</a></li>
-            <li><a class="links" href="/projects.html">projects</a>
+            <li><a class="links active" href="index.html">home</a></li>
+            <li><a class="links" href="projects.html">projects</a>
             </li>
-            <li><a class="links active" href="/blogs.html">blogs</a></li>
+            <li><a class="links" href="blogs.html">blogs</a></li>
         </ul>
-    </nav>
+        <div class="toggle" onclick="toggle()"></div>
+    </header>
 
     <main>
 
         <div>
-            <img class="blogs-img" src="/images/blogs.svg" alt="Projects">
+            <img class="blogs-img" src="images/blogs.svg" alt="Projects">
         </div>
 
         <section class="section off-white blogs">
