--- a/projects.html
+++ b/projects.html
@@ -13,11 +13,18 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/web.css">
     <link rel="stylesheet" href="styles/new.css">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel=" icon" href="images/fav.ico" type="image/x-icon">
     <title>Projects | Prerana Nawar 🖤 </title>
-   
+    <script type="text/javascript">
+        function toggle() {
+            var head = document.getElementById("header")
+            head.classList.toggle('active')
+        }
+    </script>
 </head>
 
 <body>
@@ -31,7 +38,7 @@
             </li>
             <li><a class="links" href="blogs.html">blogs</a></li>
         </ul>
-        
+        <div class="toggle" onclick="toggle()"></div>
     </header>
 
     <main>
