--- a/blogs.html
+++ b/blogs.html
@@ -36,10 +36,10 @@
        
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links active" href="index.html">home</a></li>
+            <li><a class="links" href="index.html">home</a></li>
             <li><a class="links" href="projects.html">projects</a>
             </li>
-            <li><a class="links" href="blogs.html">blogs</a></li>
+            <li><a class="links active" href="blogs.html">blogs</a></li>
         </ul>
         <div class="toggle" onclick="toggle()"></div>
     </header>
@@ -51,8 +51,8 @@
         </div>
 
         <div class="blog-btns" >
-            <button class="links link-secondary" onclick="listView()"><i class="fa fa-bars"></i> List</button>
-            <button class="links link-secondary" onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button>
+            <button class="link-secondary" onclick="listView()"><i class="fa fa-bars"></i> List</button>
+            <button class="link-secondary" onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button>
         </div>
             
         <section class="blog-view" >
