--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
        
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links active" href="index.html">home</a></li>
-            <li><a class="links" href="projects.html">projects</a>
+            <li><a class="links" href="index.html">home</a></li>
+            <li><a class="links active" href="projects.html">projects</a>
             </li>
             <li><a class="links" href="blogs.html">blogs</a></li>
         </ul>
