--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#F50057">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/web.css">
+    <link rel="stylesheet" href="styles/new.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel=" icon" href="/images/fav.ico" type="image/x-icon">
@@ -29,10 +30,10 @@
        
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links active" href="index.html">home</a></li>
-            <li><a class="links" href="projects.html">projects</a>
+            <li><a class=" nav-link links active" href="index.html">home</a></li>
+            <li><a class="nav-link links" href="projects.html">projects</a>
             </li>
-            <li><a class="links" href="blogs.html">blogs</a></li>
+            <li><a class=" nav-link links" href="blogs.html">blogs</a></li>
         </ul>
         <div class="toggle" onclick="toggle()"></div>
     </header>
@@ -53,6 +54,8 @@
                         Developer</strong> .
                 </p>
             </div>
+
+            <div role="img" class="dev" >DEV</div>
 
 
             <div class="model-1">
