Added style achievements section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>
 
-        <section class="section projects">
+        <section  class="section off-white blogs">
             <h2>My Projects</h2>
             <p>I like to showcase my work and thus, here are some of my projects.</p>
             <a class="links link-primary" href="projects.html">Browse Projects</a>
@@ -96,24 +96,63 @@
 
         <section class="section projects">
             <h2> Achievements</h2>
-            <p>I like to showcase my achievements and thus, here are some of my certificates.</p><br>
+            <p>I like to showcase my achievements and thus, here are some of my certificates.</p>
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true}'>
                 <div class="carousel-cell">
-                    <div class="card">
-                        <div class="certimage"><img src=images/blogs/dart.jpg></img></div>
-                        <div class="certdetails"><p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/responsive.png"></img></div>
+                        <div class="certdetails">
+                            <h2>Responsive Web Design Certification</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
-                    <div class="card">
-                        <div class="certimage"><img src=images/blogs/dart.jpg></img></div><br>
-                        <div class="certdetails"><p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/flask.jpg""></img></div><br>
+                        <div class="certdetails">
+                            <h2>Create First Web App Using Python and Flask.</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
-                    <div class="card">
-                        <div class="certimage"><img src=images/blogs/dart.jpg></img></div>
-                        <div class="certdetails"><p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/python.jpg"></img></div>
+                        <div class="certdetails">
+                            <h2>Getting Started With Python</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/pythonDS.jpg"></img></div>
+                        <div class="certdetails">
+                            <h2>Python Data Structures</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    </div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/js.jpg"></img></div>
+                        <div class="certdetails">
+                            <h2>Interactivity with JavaScript</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    </div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/html.jpg"></img></div>
+                        <div class="certdetails">
+                            <h2>Introduction to HTML5</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                    </div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="card carousel-card">
+                        <div class="certimage"><img src="images/cert/css.jpg"></img></div>
+                        <div class="certdetails">
+                            <h2>Introduction to CSS3</h2>
+                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
                     </div>
                 </div>
             </div>
@@ -123,6 +162,26 @@
             <h2>My Blogs</h2>
             <p>You can checkout my blogs!!</p>
             <a class="links link-secondary" href="blogs.html">Read Blogs</a>
+        </section>
+
+        <section class="section off-white blogs">
+             <h2>Get in touch!</h2>
+            
+             <form class="contactme" action="">
+                 <div>
+                    <input type="text" class="inputText" required/>
+                    <span class="floating-label">Your Name</span>
+                </div>
+                <div>
+                    <input type="text" class="inputText" required/>
+                    <span class="floating-label">Your Email Address</span>
+                </div>
+                <div>
+                    <input  class="inputText message" required></input>
+                    <span class="floating-label">Your Message</span>
+                </div>
+                 <a class="links link-primary" href="">Submit</a>
+             </form>
         </section>
     </main>
 
