Made site responsive

--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
             <a class="links link-primary" href="projects.html">Browse Projects</a>
         </section>
 
-        <section class="section off-white blogs">
+        <section class="section projects">
             <h2> Achievements</h2>
             <p>I like to showcase my achievements and thus, here are some of my certificates.</p>
+        </section>
+
+        <section class="section projects">
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true}'>
                 <div class="carousel-cell">
                     <div class="card carousel-card">
