--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 
     <header  id="header">
        
-        <div class="logo"><a href="/">preCODES</a></div>
+        <div class="logo"><a href="index.html">preCODES</a></div>
         <ul class="list-unordered">
             <li><a class="links" href="index.html">home</a></li>
             <li><a class="links active" href="projects.html">projects</a>
