career and academic added

--- a/blogs.html
+++ b/blogs.html
@@ -31,14 +31,13 @@
        
         <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links" href="index.html">home</a></li>
-            <li><a class="links" href="projects.html">projects</a>
+            <li><a class=" nav-link links active" href="index.html">home</a></li>
+            <li><a class="nav-link links" href="projects.html">projects</a>
             </li>
-            <li><a class="links active" href="blogs.html">blogs</a></li>
+            <li><a class=" nav-link links" href="blogs.html">blogs</a></li>
         </ul>
         <div class="toggle" onclick="toggle()"></div>
     </header>
-
     <main>
 
         <div>
