--- a/projects.html
+++ b/projects.html
@@ -28,18 +28,17 @@
 
 <body>
 
-    <header  id="header">
+    <header id="header">
        
-        <div class="logo"><a href="index.html">preCODES</a></div>
+        <div class="logo"><a href="/">preCODES</a></div>
         <ul class="list-unordered">
-            <li><a class="links" href="index.html">home</a></li>
-            <li><a class="links active" href="projects.html">projects</a>
+            <li><a class=" nav-link links active" href="index.html">home</a></li>
+            <li><a class="nav-link links" href="projects.html">projects</a>
             </li>
-            <li><a class="links" href="blogs.html">blogs</a></li>
+            <li><a class=" nav-link links" href="blogs.html">blogs</a></li>
         </ul>
         <div class="toggle" onclick="toggle()"></div>
     </header>
-
     <main>
         <div>
             <img class="projects-img" src="images/projects.svg" alt="Projects">
