Added loading spinner

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="toggle" onclick="toggle()"></div>
     </header>
     
+    <div class="loader">
+        <img src="images/loading.gif" alt="Loading..." />
+    </div>
 
     <main>
         <div class="hero-content">
@@ -161,7 +164,7 @@
             </div>
         </section>
 
-        <section class="section off-white blogs">
+        <section class="section off-white blogs blog">
             <h2>My Blogs</h2>
             <p>You can checkout my blogs!!</p>
             <a class="links link-secondary" href="blogs.html">Read Blogs</a>
@@ -211,6 +214,7 @@
         <p>© | 2021 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
     </footer>
     
+    <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
