--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2>My Academic Career</h2>
             <p>I like to showcase my work and thus, here are some of my projects.</p>
             </div>
-            <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true, "pageDots": false}'>
+            <div class="carousel" data-flickity='{"wrapAround":true, "freeScroll": true, "autoPlay":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
                     <div class="card carousel-card">
                         <div class="certdetails">
@@ -128,7 +128,7 @@
                 <h2>My Work Experience</h2>
                 <p>I like to showcase my work and thus, here are some of my projects.</p>
             </div>
-            <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true, "pageDots": false}'>
+            <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
                     <div class="card carousel-card">
                         <div class="certdetails">
@@ -157,7 +157,7 @@
         </section>
 
         <section class="section projects">
-            <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true}'>
+            <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "imagesLoaded": true}'>
                 <div class="carousel-cell">
                     <div class="card carousel-card">
                         <div class="certimage"><img src="images/cert/responsive.png"></img></div>
