Added slide grid

--- a/index.html
+++ b/index.html
@@ -105,18 +105,30 @@
             </div>
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
-                    <div class="card carousel-card">
+                    <div class="card carousel-card carousel-grid">
                         <div class="certdetails">
-                            <h2>Responsive Web Design Certification</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                            <div class="cert-main">
+                                <h3>Diploma in Computer Engineering</h3>
+                                <h4>- Vidyalankar Polytechnic, Wadala</h4>
+                            </div>
+                            <div>
+                                <p> In Progress </p>
+                                <p> Fourth Semester Percentage - 90.40% </p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-cell">
-                    <div class="card carousel-card">
+                    <div class="card carousel-card carousel-grid">
                         <div class="certdetails">
-                            <h2>Responsive Web Design Certification</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                          <div class="cert-main">
+                                <h3>Senior Secondary (10th)</h3>
+                                <h4>- King George High School, Dadar</h4>
+                            </div>
+                            <div>
+                                <p> June 2005 - March 2018 </p>
+                                <p> Percentage - 88% </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -130,18 +142,30 @@
             </div>
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "fade":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
-                    <div class="card carousel-card">
+                    <div class="card carousel-card carousel-grid">
                         <div class="certdetails">
-                            <h2>Responsive Web Design Certification</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                            <div class="cert-main">
+                                <h3>FullStack Developer</h3>
+                                <h4>The Crazy Entrepreneur, Mumbai</h4>
+                            </div>
+                            <div>
+                                <p>PHP, Laravel, HTML, CSS and Bootstrap.</p>
+                                <p>July 2020 - September 2020</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-cell">
-                    <div class="card carousel-card">
+                    <div class="card carousel-card carousel-grid">
                         <div class="certdetails">
-                            <h2>Responsive Web Design Certification</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                            <div class="cert-main">
+                                <h3>FullStack Developer</h3>
+                                <h4>The Crazy Entrepreneur, Mumbai</h4>
+                            </div>
+                            <div >
+                                <p>HTML, CSS, JavaScript,PHP, MYSQL and Bootstrap.</p>
+                                <p>May 2020 - July 2020</p>
+                            </div>
                         </div>
                     </div>
                 </div>
