--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div>
             <div>
             <h2>My Academic Career</h2>
-            <p>Here's my academic career</p>
+            <p>I like to showcase my career and thus, here are my academics.</p>
             </div>
             <div class="carousel" data-flickity='{"wrapAround":true, "freeScroll": true, "autoPlay":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
@@ -138,7 +138,7 @@
         <div>
             <div>
                 <h2>My Work Experience</h2>
-                <p>My overall work experience!</p>
+                <p>I like to showcase my experience and thus, here is work in real world.</p>
             </div>
             <div class="carousel" data-flickity='{"wrapAround":true, "autoPlay":true, "imagesLoaded": true, "pageDots": false}'>
                 <div class="carousel-cell">
