--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="certimage"><img src="images/cert/responsive.png"></img></div>
                         <div class="certdetails">
                             <h2>Responsive Web Design Certification</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>In this Responsive Web Design Certification, I learnt the languages that developers use to build webpages: HTML (Hypertext Markup Language) for content, and CSS (Cascading Style Sheets) for design.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
@@ -195,7 +195,7 @@
                         <div class="certimage"><img src="images/cert/flask.jpg""></img></div><br>
                         <div class="certdetails">
                             <h2>Create First Web App Using Python and Flask.</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>In this 2-hour long project-based course, you will learn the basics of web application development with Python using the Flask framework. Through hands on, practical experience, you will go through concepts like creating a Flask Application, using Templates in Flask Applications, using SQLAlchemy and SQLite with Flask, and using Flask and WTForms. You will then apply the concepts to create your first web application with Python and Flask.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
@@ -203,7 +203,7 @@
                         <div class="certimage"><img src="images/cert/python.jpg"></img></div>
                         <div class="certdetails">
                             <h2>Getting Started With Python</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                            <p>This course aims to teach everyone the basics of programming computers using Python. We cover the basics of how one constructs a program from a series of simple instructions in Python.  The course has no pre-requisites and avoids all but the simplest mathematics. Anyone with moderate computer experience should be able to master the materials in this course.</p>
                         </div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                         <div class="certimage"><img src="images/cert/pythonDS.jpg"></img></div>
                         <div class="certdetails">
                             <h2>Python Data Structures</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>This course aims to teach everyone the basics of programming computers using Python. We cover the basics of how one constructs a program from a series of simple instructions in Python.  The course has no pre-requisites and avoids all but the simplest mathematics. Anyone with moderate computer experience should be able to master the materials in this course.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
@@ -220,7 +220,7 @@
                         <div class="certimage"><img src="images/cert/js.jpg"></img></div>
                         <div class="certdetails">
                             <h2>Interactivity with JavaScript</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>This course will introduce you to the basics of the JavaScript language.  We will cover concepts such as variables, looping, functions, and even a little bit about debugging tools.  You will understand how the Document Object Model (DOM) is used by JavaScript to identify and modify specific parts of your page.  After the course, learners will be able to react to DOM Events and dynamically alter the contents and style of their page.   The class will culminate in a  final project - the creation of an interactive HTML5 form that accepts and verifies input.</p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
@@ -228,7 +228,8 @@
                         <div class="certimage"><img src="images/cert/html.jpg"></img></div>
                         <div class="certdetails">
                             <h2>Introduction to HTML5</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>This course will appeal to a wide variety of people, but specifically those who would like a step-by-step description of the basics. There are no prerequisites for this course and it is assumed that students have no prior programming skills or IT experience. The course will culminate in a small final project that will require the completion of a very simple page with links and images. The focus of this course is on the basics, not appearance. You can see a sample final page at http://intro-webdesign.com/html5-plain.html.  
+                            </p></div>
                     </div>
                 </div>
                 <div class="carousel-cell">
@@ -236,7 +237,7 @@
                         <div class="certimage"><img src="images/cert/css.jpg"></img></div>
                         <div class="certdetails">
                             <h2>Introduction to CSS3</h2>
-                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p></div>
+                            <p>The web today is almost unrecognizable from the early days of white pages with lists of blue links.  Now, sites are designed with complex layouts, unique fonts, and customized color schemes.   This course will show you the basics of Cascading Style Sheets (CSS3).  The emphasis will be on learning how to write CSS rules, how to test code, and how to establish good programming habits.   </p></div>
                     </div>
                 </div>
             </div>
